--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "firebase": "^10.12.3",
+    "moment": "^2.30.1",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
     "react": "^18",
